--- a/templateSources/WpfApplication/Company.Desktop.Application/Views/Windows/DefaultWindow.xaml
+++ b/templateSources/WpfApplication/Company.Desktop.Application/Views/Windows/DefaultWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Company.Desktop.Application.Views.Windows.DefaultWindow"
+﻿<mah:MetroWindow x:Class="Company.Desktop.Application.Views.Windows.DefaultWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -7,11 +7,15 @@
         xmlns:viewMapping="clr-namespace:Company.Desktop.Framework.Mvvm.Integration.ViewMapping;assembly=Company.Desktop.Framework.Mvvm"
         xmlns:common="clr-namespace:Company.Desktop.ViewModels.Common;assembly=Company.Desktop.ViewModels"
         xmlns:framework="http://schemas.localcontrols.com/winfx/2006/xaml/presentation"
+        xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
         mc:Ignorable="d"
 		x:Name="Self"
         d:DataContext="{d:DesignInstance viewModel:WindowViewModel}"
         Title="{Binding Path=Title}" 
 		ResizeMode="{Binding Path=ResizeMode}"
+        Style="{StaticResource DefaultWindowStyle}"
+		MinWidth="{Binding Path=MinWidth}" MinHeight="{Binding Path=MinHeight}"
+		MaxWidth="{Binding Path=MaxWidth}" MaxHeight="{Binding Path=MaxHeight}"
         Height="{Binding Path=Height}" 
         Width="{Binding Path=Width}">
 	<Grid>
@@ -24,4 +28,4 @@
 		                  viewMapping:RegionManager.ViewModel="{Binding ElementName=Self, Path=DataContext}" 
 		                  viewMapping:RegionManager.RegionName="{x:Static common:RegionNames.TopArea}" />
     </Grid>
-</Window>
+</mah:MetroWindow>
