--- a/templateSources/WpfApplication/Company.Desktop.Application/App.xaml
+++ b/templateSources/WpfApplication/Company.Desktop.Application/App.xaml
@@ -1,15 +1,26 @@
 ﻿<Application x:Class="Company.Desktop.Application.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Company.Desktop.Application"
-             xmlns:controls="clr-namespace:Company.Desktop.ViewModels.Controls;assembly=Company.Desktop.ViewModels"
-             xmlns:controls1="clr-namespace:Company.Desktop.Application.Views.Controls"
+             xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
              StartupUri="Views/Windows/Splash.xaml">
     <Application.Resources>
 		<ResourceDictionary>
 			<ResourceDictionary.MergedDictionaries>
+				<ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
+				<ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
+				<ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/colors.xaml" />
+				<ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/red.xaml" />
+				<ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/baselight.xaml" />
 				<ResourceDictionary Source="Resources/Resources.xaml"/>
+				<ResourceDictionary>
+
+					<Style TargetType="{x:Type mah:MetroWindow}" x:Key="DefaultWindowStyle">
+						<Setter Property="GlowBrush" Value="{DynamicResource AccentColorBrush}" />
+						<Setter Property="TitleCharacterCasing" Value="Normal" />
+					</Style>
+				</ResourceDictionary>
 			</ResourceDictionary.MergedDictionaries>
+
 		</ResourceDictionary>
     </Application.Resources>
 </Application>
