--- a/templateSources/WpfApplication/Company.Desktop.Application/Views/Windows/MainWindow.xaml
+++ b/templateSources/WpfApplication/Company.Desktop.Application/Views/Windows/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Company.Desktop.Application.Views.Windows.MainWindow"
+﻿<mah:MetroWindow x:Class="Company.Desktop.Application.Views.Windows.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -9,11 +9,15 @@
         xmlns:mvvm="clr-namespace:Company.Desktop.Framework.Mvvm;assembly=Company.Desktop.Framework.Mvvm"
         xmlns:integration="clr-namespace:Company.Desktop.Framework.Mvvm.Integration;assembly=Company.Desktop.Framework.Mvvm"
         xmlns:viewMapping="clr-namespace:Company.Desktop.Framework.Mvvm.Integration.ViewMapping;assembly=Company.Desktop.Framework.Mvvm"
+        xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
         mc:Ignorable="d"
 		x:Name="Self"
         d:DataContext="{d:DesignInstance windows:MainViewModel}"
         ResizeMode="{Binding Path=ResizeMode}"
         Title="{Binding Path=Title}" 
+        Style="{StaticResource DefaultWindowStyle}"
+        MinWidth="{Binding Path=MinWidth}" MinHeight="{Binding Path=MinHeight}"
+        MaxWidth="{Binding Path=MaxWidth}" MaxHeight="{Binding Path=MaxHeight}"
         Height="{Binding Path=Height, Mode=TwoWay}" 
         Width="{Binding Path=Width, Mode=TwoWay}">
 	<Grid>
@@ -23,7 +27,6 @@
 			<RowDefinition Height="*"/>
 		</Grid.RowDefinitions>
 		<StackPanel>
-			<CheckBox IsChecked="{Binding Path=LoadingState.IsBusy}"/>
 			<ItemsControl ItemsSource="{Binding Path=Commands}">
 				<ItemsControl.ItemTemplate>
 					<DataTemplate DataType="{x:Type windows:MainViewModel+TestCommand}">
@@ -39,4 +42,4 @@
 		                  viewMapping:RegionManager.ViewModel="{Binding ElementName=Self, Path=DataContext}" 
 		                  viewMapping:RegionManager.RegionName="{x:Static common:RegionNames.BottomArea}" />
     </Grid>
-</Window>
+</mah:MetroWindow>
