--- a/templateSources/WpfApplication/Company.Desktop.Application/App.xaml
+++ b/templateSources/WpfApplication/Company.Desktop.Application/App.xaml
@@ -2,6 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
+             xmlns:controls1="clr-namespace:Company.Desktop.ViewModels.Controls;assembly=Company.Desktop.ViewModels"
              StartupUri="Views/Windows/Splash.xaml">
     <Application.Resources>
 		<ResourceDictionary>
@@ -15,6 +16,9 @@
 				<ResourceDictionary Source="Resources/Styles.xaml"/>
 			</ResourceDictionary.MergedDictionaries>
 
+			<!-- <DataTemplate DataType="{x:Type controls1:SampleDataOverviewViewModel}"> -->
+			<!-- 	<TextBlock Text="hi" Background="Red"></TextBlock> -->
+			<!-- </DataTemplate> -->
 		</ResourceDictionary>
     </Application.Resources>
 </Application>
