Refactorings, namespace cleanup + Behaviors

--- a/templateSources/WpfApplication/Company.Desktop.Application/App.xaml
+++ b/templateSources/WpfApplication/Company.Desktop.Application/App.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
              xmlns:controls1="clr-namespace:Company.Desktop.ViewModels.Controls;assembly=Company.Desktop.ViewModels"
+			 ShutdownMode="OnMainWindowClose"
              StartupUri="Views/Windows/Splash.xaml">
     <Application.Resources>
 		<ResourceDictionary>
