--- a/templateSources/WpfApplication/Company.Desktop.Application/Resources/Styles.xaml
+++ b/templateSources/WpfApplication/Company.Desktop.Application/Resources/Styles.xaml
@@ -1,10 +1,20 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
-                    xmlns:framework="http://schemas.localcontrols.com/winfx/2006/xaml/presentation">
+                    xmlns:framework="http://schemas.localcontrols.com/winfx/2006/xaml/presentation"
+                    xmlns:aui="http://schemas.amusoft.ui.wpf.com/winfx/2006/xaml/presentation"
+                    xmlns:ui="clr-namespace:Company.Desktop.Framework.Mvvm.UI;assembly=Company.Desktop.Framework.Mvvm">
 
 	<Style TargetType="{x:Type mah:MetroWindow}" x:Key="DefaultWindowStyle">
 		<!-- <Setter Property="GlowBrush" Value="{DynamicResource AccentColorBrush}" /> -->
 		<Setter Property="TitleCharacterCasing" Value="Normal" />
 	</Style>
+
+
+	<DataTemplate DataType="{x:Type ui:Notification}">
+		<StackPanel VerticalAlignment="Center">
+			<TextBlock Text="{Binding Path=Title}" Foreground="White" FontSize="17"/>
+			<TextBlock Text="{Binding Path=Description}" Foreground="#BBBBBB" FontSize="13"/>
+		</StackPanel>
+	</DataTemplate>
 </ResourceDictionary>
