--- a/templateSources/WpfApplication/Company.Desktop.Application/Resources/Styles.xaml
+++ b/templateSources/WpfApplication/Company.Desktop.Application/Resources/Styles.xaml
@@ -4,10 +4,25 @@
                     xmlns:framework="http://schemas.localcontrols.com/winfx/2006/xaml/presentation"
                     xmlns:aui="http://schemas.amusoft.ui.wpf.com/winfx/2006/xaml/presentation"
                     xmlns:ui="clr-namespace:Company.Desktop.Framework.Mvvm.UI;assembly=Company.Desktop.Framework.Mvvm">
+	<ResourceDictionary.MergedDictionaries>
+		<ResourceDictionary Source="pack://application:,,,/Amusoft.UI.WPF;component/Themes/Generic.xaml" />
+	</ResourceDictionary.MergedDictionaries>
 
 	<Style TargetType="{x:Type mah:MetroWindow}" x:Key="DefaultWindowStyle">
-		<!-- <Setter Property="GlowBrush" Value="{DynamicResource AccentColorBrush}" /> -->
+		<Setter Property="GlowBrush" Value="{DynamicResource AccentColorBrush}" />
 		<Setter Property="TitleCharacterCasing" Value="Normal" />
+	</Style>
+
+	<!-- <Style TargetType="{x:Type aui:NotificationDisplay}" ></Style> -->
+	<Style TargetType="{x:Type aui:NotificationDisplayItem}" BasedOn="{StaticResource DefaultNotificationDisplayItem}">
+	<!-- <Style TargetType="{x:Type aui:NotificationDisplayItem}"> -->
+		<Setter Property="NotificationIconTemplate">
+			<Setter.Value>
+				<DataTemplate>
+					<TextBlock Text="Some text"></TextBlock>
+				</DataTemplate>
+			</Setter.Value>
+		</Setter>
 	</Style>
 
 	<DataTemplate DataType="{x:Type ui:Notification}">
