--- a/templateSources/WpfApplication/Company.Desktop.Framework.Controls/Themes/Generic.xaml
+++ b/templateSources/WpfApplication/Company.Desktop.Framework.Controls/Themes/Generic.xaml
@@ -15,6 +15,7 @@
 			<Setter.Value>
 				<ControlTemplate TargetType="{x:Type local:OverlayPanel}">
 					<Border Background="{TemplateBinding Background}"
+							Padding="{TemplateBinding Padding}"
 					        BorderBrush="{TemplateBinding BorderBrush}"
 					        BorderThickness="{TemplateBinding BorderThickness}">
 						<Grid>
