Project rename feature complete with tests

--- a/src/Tooling/Features/ProjectRenamer/Views/ProjectRenameDialogWindow.xaml
+++ b/src/Tooling/Features/ProjectRenamer/Views/ProjectRenameDialogWindow.xaml
@@ -25,7 +25,7 @@
 			                                               VisibilityIfTrue="Collapsed"/>
 		</ResourceDictionary>
 	</UserControl.Resources>
-	<Border>
+	<Border Visibility="{Binding Path=IsViewModelTerminated, Converter={StaticResource BooleanToVisibilityConverterInverted}}">
 		<controls:BottomCommandLayout>
 			<controls:BottomCommandLayout.TopArea>
 				<StackPanel>
