--- a/templateSources/WpfApplication/Company.Desktop.Framework.Controls/Themes/Generic.xaml
+++ b/templateSources/WpfApplication/Company.Desktop.Framework.Controls/Themes/Generic.xaml
@@ -1,7 +1,8 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="clr-namespace:Company.Desktop.Framework.Controls">
+    xmlns:local="clr-namespace:Company.Desktop.Framework.Controls"
+    xmlns:helpers="clr-namespace:Company.Desktop.Framework.Controls.Helpers">
 
 	<BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"></BooleanToVisibilityConverter>
 
@@ -31,4 +32,57 @@
 			</Setter.Value>
 		</Setter>
 	</Style>
+
+	<Style TargetType="{x:Type local:ContentPanel}">
+		<Setter Property="Padding" Value="10"></Setter>
+		<Setter Property="Template">
+			<Setter.Value>
+				<ControlTemplate TargetType="{x:Type local:ContentPanel}">
+					<Border 
+						BorderThickness="{TemplateBinding BorderThickness}" 
+						BorderBrush="{TemplateBinding BorderBrush}" 
+						Background="{TemplateBinding Background}" 
+						Padding="{TemplateBinding Padding}">
+						<ContentPresenter/>
+					</Border>
+				</ControlTemplate>
+			</Setter.Value>
+		</Setter>
+	</Style>
+
+	<Style TargetType="{x:Type local:ToolbarPanel}">
+		<Setter Property="Padding" Value="8"></Setter>
+		<Setter Property="ItemsSpacing" Value="0,0,8,0"></Setter>
+		<Setter Property="BorderThickness" Value="0,1,0,0"></Setter>
+		<Setter Property="BorderBrush" Value="Black"></Setter>
+		<Setter Property="Template">
+			<Setter.Value>
+				<ControlTemplate TargetType="{x:Type local:ToolbarPanel}">
+					<Border Background="{TemplateBinding Background}" 
+					        BorderBrush="{TemplateBinding BorderBrush}"
+					        BorderThickness="{TemplateBinding BorderThickness}"
+					        Padding="{TemplateBinding Padding}" >
+						<Grid>
+							<Grid.ColumnDefinitions>
+								<ColumnDefinition Width="*" />
+								<ColumnDefinition Width="Auto" />
+							</Grid.ColumnDefinitions>
+							<StackPanel Orientation="Horizontal" 
+							            x:Name="PART_Left"
+							            helpers:PanelHelper.ChildMargin="{TemplateBinding ItemsSpacing}" 
+							            helpers:PanelHelper.SkipLastMargin="True">
+							</StackPanel>
+							<StackPanel Orientation="Horizontal"
+							            Grid.Column="1"
+							            x:Name="PART_Right"
+							            helpers:PanelHelper.ChildMargin="{TemplateBinding ItemsSpacing}" 
+							            helpers:PanelHelper.SkipLastMargin="True">
+							</StackPanel>
+						</Grid>
+					</Border>
+				</ControlTemplate>
+			</Setter.Value>
+		</Setter>
+	</Style>
+
 </ResourceDictionary>
